the updated index.html

--- a/climatovate-workshop-series/index.html
+++ b/climatovate-workshop-series/index.html
@@ -134,9 +134,9 @@
         <div class="next-workshop">
             <h3>Introduction to Hyperlocal Climate Intelligence</h3>
             <div class="workshop-details">
-                <span>📅 January 30, 2026</span>
-                <span>🕐 2:00 PM WAT</span>
-                <span>💻 Zoom</span>
+                <span>📅 January - December</span>
+                <span>🕐 Time: to be communicated</span>
+                <span>💻 venue: to be communicated</span>
             </div>
             <p style="margin-bottom: 20px; color: #666;">Learn how climate data specific to your location can help you make better decisions.</p>
             <a href="forms/registration-form.html" class="btn btn-primary" style="display: inline-block;">Register Free →</a>
