the updated index.html

--- a/climatovate-workshop-series/index.html
+++ b/climatovate-workshop-series/index.html
@@ -110,7 +110,7 @@
         <div class="feature">
             <div class="feature-icon">📍</div>
             <h3>Hyperlocal Data</h3>
-            <p>Climate intelligence specific to your state and LGA</p>
+            <p>Climate intelligence specific to your state and LGA of residence</p>
         </div>
         <div class="feature">
             <div class="feature-icon">🌐</div>
